--- a/action.yml
+++ b/action.yml
@@ -59,6 +59,10 @@ inputs:
   copy-env-vars:
     description: 'Multiline list of pipeline environment variables to be copied over to the App Runner service environment'
     required: false
+  auto-deployments-enabled:
+    description: 'Whether to enable AutoDeploymentsEnabled'
+    required: false
+    default: 'true'
 outputs:
   service-id:
     description: 'App Runner service ID'
