--- a/action.yml
+++ b/action.yml
@@ -60,7 +60,7 @@ inputs:
     description: 'Multiline list of pipeline environment variables to be copied over to the App Runner service environment'
     required: false
   tags:
-    description: 'key-value pairs to associate with the service. This input should be JSON-formatted, for example [ { "Key": "string", "Value": "string" } ]'
+    description: 'key-value pairs to associate with the service. This input should be JSON-formatted, for example { "env": "test" }'
     required: false
 outputs:
   service-id:
